--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -94,6 +94,7 @@
     <Content Include="scripts\custom.js" />
     <Content Include="scripts\jquery.easing.min.js" />
     <Content Include="scripts\jquery.min.js" />
+    <Content Include="scripts\myCustom.js" />
     <Content Include="scripts\wow.js" />
     <Content Include="Web.config" />
   </ItemGroup>
