--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -77,7 +77,7 @@
     <Content Include="images\android-chrome-192x192.png" />
     <Content Include="images\android-chrome-512x512.png" />
     <Content Include="images\apple-touch-icon.png" />
-    <Content Include="images\banner.jpeg" />
+    <Content Include="images\banner.jpg" />
     <Content Include="images\cta-banner.jpg" />
     <Content Include="images\favicon-16x16.png" />
     <Content Include="images\favicon-32x32.png" />
@@ -95,6 +95,51 @@
     <Content Include="scripts\jquery.easing.min.js" />
     <Content Include="scripts\jquery.min.js" />
     <Content Include="scripts\myCustom.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shAutoloader.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushAppleScript.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushAS3.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushBash.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushColdFusion.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushCpp.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushCSharp.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushCss.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushDelphi.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushDiff.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushErlang.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushGroovy.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushJava.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushJavaFX.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushJScript.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushPerl.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushPhp.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushPlain.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushPowerShell.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushPython.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushRuby.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushSass.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushScala.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushSql.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushVb.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shBrushXml.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shCore.js" />
+    <Content Include="scripts\SyntaxHighlighter\scripts\shLegacy.js" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shCore.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shCoreDefault.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shCoreDjango.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shCoreEclipse.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shCoreEmacs.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shCoreFadeToGrey.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shCoreMDUltra.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shCoreMidnight.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shCoreRDark.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shThemeDefault.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shThemeDjango.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shThemeEclipse.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shThemeEmacs.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shThemeFadeToGrey.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shThemeMDUltra.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shThemeMidnight.css" />
+    <Content Include="scripts\SyntaxHighlighter\styles\shThemeRDark.css" />
     <Content Include="scripts\wow.js" />
     <Content Include="Web.config" />
   </ItemGroup>
