--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -78,16 +78,16 @@
     <Content Include="images\android-chrome-512x512.png" />
     <Content Include="images\apple-touch-icon.png" />
     <Content Include="images\banner.jpg" />
+    <Content Include="images\port04.jpg" />
+    <Content Include="images\port03.png" />
     <Content Include="images\cta-banner.jpg" />
     <Content Include="images\favicon-16x16.png" />
     <Content Include="images\favicon-32x32.png" />
     <Content Include="images\favicon.ico" />
     <Content Include="images\port01.jpg" />
-    <Content Include="images\Blog.jpg" />
-    <Content Include="images\port04.jpg" />
     <Content Include="images\port05.jpg" />
     <Content Include="images\port06.jpg" />
-    <Content Include="images\BugTracker.jpg" />
+    <Content Include="images\port02.jpg" />
     <Content Include="index.html" />
     <Content Include="scripts\bootstrap.min.js" />
     <Content Include="scripts\contactform.js" />
